--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "toastmaster-bot",
   "version": "1.0.0",
   "description": "",
-  "main": "src/index.js",
+  "main": "src/index.ts",
   "scripts": {
-    "start:local": "npx pm2 stop all; npx pm2 start src/index.js && npx pm2 logs",
-    "start:prod": "npx pm2 stop all; npx pm2 start src/index.js",
+    "start:local": "tsc && npx pm2 stop all; npx pm2 start lib/index.js && npx pm2 logs",
+    "start:prod": "tsc && npx pm2 stop all; npx pm2 start lib/index.js",
     "stop": "npx pm2 stop all"
   },
   "author": "",
@@ -16,6 +16,7 @@
     "discord.js": "^11.5.1",
     "dotenv": "^8.0.0",
     "node-html-parser": "^1.1.16",
-    "pm2": "^3.5.1"
+    "pm2": "^3.5.1",
+    "typescript": "^3.5.3"
   }
 }
