--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@google-cloud/translate": "^4.1.1",
     "axios": "^0.19.0",
+    "dashbot": "^10.4.1",
     "discord.js": "^11.5.1",
     "dotenv": "^8.0.0",
     "node-html-parser": "^1.1.16",
