--- a/package.json
+++ b/package.json
@@ -4,20 +4,21 @@
   "description": "",
   "main": "src/index.ts",
   "scripts": {
-    "start:local": "tsc && npx pm2 stop all; npx pm2 start lib/index.js && npx pm2 logs",
-    "start:prod": "tsc && npx pm2 stop all; npx pm2 start lib/index.js",
-    "stop": "npx pm2 stop all"
+    "start:local": "tsc && npx pm2 stop toastmaster; npx pm2 start lib/index.js --name toastmaster && npx pm2 logs --name toastmaster",
+    "start:prod": "tsc && npx pm2 stop toastmaster; npx pm2 start lib/index.js --name toastmaster",
+    "stop": "npx pm2 stop toastmaster"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@google-cloud/translate": "^4.1.1",
+    "@google-cloud/translate": "^4.2.1",
     "axios": "^0.19.0",
-    "dashbot": "^10.4.1",
+    "dashbot": "^11.0.0",
     "discord.js": "^11.5.1",
-    "dotenv": "^8.0.0",
+    "dotenv": "^8.2.0",
     "node-html-parser": "^1.1.16",
-    "pm2": "^3.5.1",
-    "typescript": "^3.5.3"
+    "pm2": "^4.1.2",
+    "prettier": "^1.18.2",
+    "typescript": "^3.7.0-beta"
   }
 }
